--- a/src/components/Profile.css
+++ b/src/components/Profile.css
@@ -105,7 +105,7 @@
 .react-tabs__tab-list{
     border-bottom: 0 !important;
     padding: 0;
-    margin:0px 0px 86px !important;
+    margin:0px 0px 86px 150px!important;
     font-size: 31px !important;
     font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
