--- a/src/components/Tabs/Have.css
+++ b/src/components/Tabs/Have.css
@@ -1,18 +1,19 @@
 /*Desktop view*/
-.Me__property{
-    color:#291E17;
-    font-style: normal;
+.Have__property{
     font-size: 18px;
-    line-height: 21px;
+    font-style:normal;
     font-weight: bold;
-}
-.Me__value{
-    font-size: 18px;
-    line-height: 28px;
-    font-weight: 300;
+    line-height: 21px;
     color: #291E17;
 }
-.Me__hr{
+.Have__value{
+    font-size: 18px;
+    font-weight: 300;
+    font-style: normal;
+    line-height: 21px;
+    color: #291E17;
+}
+.Have__hr{
     width: 689px;
     height: 0px;
     border: 2px solid #CC9B66;
@@ -20,5 +21,4 @@
     margin-left: 0px;
     margin-top: 10px;
     margin-bottom: 50px;
-
 }
