--- a/src/components/Profile.css
+++ b/src/components/Profile.css
@@ -127,3 +127,34 @@
     border-bottom: 6px solid #CC9B66 !important ;
     font-weight: bold !important;
 }
+
+/*For devices for medium and large devices*/
+@media(min-width: 800px) and (max-width:1200px){
+   .Profile__photo{
+       width: 180px;
+       width: 180px;
+   }
+   .Profile__container{
+       padding-left: 50px;
+   }
+   .Profile_myself{
+       font-size: 22px;
+   }
+   .Profile__firstname{
+       font-size: 16px;
+       line-height: 21.25px;
+   }
+   .Profile__age{
+       font-size: 16px;
+   }
+   .Profile__city{
+       font-size: 16px;
+   }
+   .react-tabs__tab{
+       margin: 46px 130px 0px 0px !important;
+       font-size: 28px;
+   }
+   .react-tabs__tab-list{
+       margin: 0px 0px 86px 70px !important;
+   }
+}
