--- a/src/components/Profile.css
+++ b/src/components/Profile.css
@@ -127,6 +127,63 @@
     border-bottom: 6px solid #CC9B66 !important ;
     font-weight: bold !important;
 }
+/*For small and medium devices*/
+@media (min-width:576px) and (max-width:800px){
+    .Profile__photo{
+        width: 140px;
+        height: 140px;
+        border-radius: 60px;
+    }
+    .Profile__left-characters{
+        float: left;
+        width:50.94px;
+        height:50.94px;
+        border-radius: 50px;
+    }
+    .Profile__right-characters{
+        float: right;
+        margin-left: 44px;
+        width: 50.94px;
+        height: 50.94px;
+        border-radius:50px;
+    }
+    .react-tabs__tab{
+        margin: 46px 100px 0px 0px !important;
+        font-size: 25px;
+    }
+    .Profile__container{
+        margin-top: 147px;
+        padding-left: 50px;
+    }
+    .Profile__name{
+        position: absolute;
+        left:177px;
+        top:50px;
+    }
+    .Profile__myself{
+        font-size:20px;
+        line-height:20px;
+    }
+    .Profile__firstname{
+        font-size:16px;
+        line-height:22.25px;
+        width: max-content;
+        margin-top:5px;
+    }
+    .Profile__age{
+        font-size: 16px;
+    }
+    .Profile__city{
+        font-size:16px;
+    }
+   .react-tabs__tab-list{
+       margin: 0px 0px 86px 95px !important;
+   }
+   .react-tabs__tab{
+       margin: 45px 85px 0px 0px !important;
+       font-size: 22px;
+   }
+}
 
 /*For devices for medium and large devices*/
 @media(min-width: 800px) and (max-width:1200px){
@@ -143,6 +200,7 @@
    .Profile__firstname{
        font-size: 16px;
        line-height: 21.25px;
+       width:max-content;
    }
    .Profile__age{
        font-size: 16px;
