--- a/src/components/Tabs/Have.css
+++ b/src/components/Tabs/Have.css
@@ -22,3 +22,52 @@
     margin-top: 10px;
     margin-bottom: 50px;
 }
+
+/*For small and medium devices*/
+@media(min-width: 576px) and (max-width: 800px){
+    .Have__hr{
+        width:340px;
+        margin-left:95px;
+        margin-top:10px;
+        margin-bottom:20px;
+    }
+    .Have__property{
+        font-size:13px;
+        padding-left: 95px;
+        width: max-content;
+    }
+    .Have__value{
+        font-size:13px;
+        line-height: 20px;
+        padding-left: 50px;
+    }
+    .Have__Cdisease{
+        padding-left: 110px;
+    }
+    .Have__Hdisease{
+        padding-left: 130px;
+    }
+}
+/*For medium and large devices*/
+@media(min-width:800px) and (max-width:1200px){
+    .Have__property{
+        padding-left:70px;
+        font-size:15px;
+        width: max-content;
+
+    }
+    .Have__value{
+        font-size:15px;
+    }
+    .Have__Cdisease{
+        padding-left: 50px;
+    }
+    .Have__Hdisease{
+        padding-left: 70px;
+    }
+    .Have__hr{
+        margin-left:70px;
+        width:459px;
+        margin-bottom:30px;
+    }
+}
