--- a/src/components/Tabs/I.css
+++ b/src/components/Tabs/I.css
@@ -21,12 +21,7 @@
     margin-top: 10px;
     margin-bottom: 50px;
 }
-.Drink__dropdown{
-    width: 274px;
-    height: 247px;
-    background: rgba(234, 234, 234, 0.4);
-    backdrop-filter: blur(44px);
-}
+
 .myClassName{
     background: rgba(234, 234, 234, 0.4);
     width: 247px;
@@ -35,7 +30,7 @@
 }
 .myMenuClassName{
     background: rgba(234, 234, 234, 0.4);
-    height:255px;
+    height:255px !important;
     /* backdrop-filter: blur(44px);*/
 }
 .Dropdown-placeholder{
