--- a/src/components/Tabs/Me.css
+++ b/src/components/Tabs/Me.css
@@ -21,6 +21,24 @@
     margin-top: 10px;
     margin-bottom: 50px;
 }
+.myClassName{
+     background: rgba(234, 234, 234, 0.4);
+    width: 247px;
+    
+    backdrop-filter: blur(44px);
+}
+.myMenuClassName{
+    background: rgba(234, 234, 234, 0.4);
+    height:520px !important;
+    /* backdrop-filter: blur(44px);*/
+}
+.Dropdown-placeholder{
+    padding: 14px 23px 10px 23px;
+}
+.Dropdown-option{
+    padding: 14px 0px 10px 23px;
+    border-top: 0.4px solid #CC9B66;
+}
 /* .Me__circlesvg{
     padding-left: 31px;
 }
