--- a/src/components/Tabs/I.css
+++ b/src/components/Tabs/I.css
@@ -30,7 +30,7 @@
 }
 .myMenuClassName{
     background: rgba(234, 234, 234, 0.4) !important;
-    height:255px !important;
+    /* height:255px !important; */
     /* backdrop-filter: blur(44px);*/
 }
 .Dropdown-placeholder{
