--- a/src/components/Profile.css
+++ b/src/components/Profile.css
@@ -127,6 +127,130 @@
     border-bottom: 6px solid #CC9B66 !important ;
     font-weight: bold !important;
 }
+
+.Profile__RelationshipHeading{
+    font-size: 32px;
+    line-height: 38px;
+    display: flex;
+    color: #000000;
+    font-weight: 600;
+    float: left;
+    margin-left: 150px;
+    margin-bottom: 50px;
+}
+.Profile__AddCustomButton{
+    margin-right:0px;
+    background-color: #FFFFFF;
+    box-shadow: 0px 1px 4px rgba(69,69,69,0.25);
+    border-radius: 20px;
+    font-size: 18px;
+    font-weight: 500;
+    color: #FF8334;
+    text-align: center;
+    width: 149px;
+    height: 51px;
+    float: right;
+    margin-left: 300px;
+    margin-right: 100px;
+}
+.accordion__button:before{
+    display: none !important;
+    background-color: none !important;
+    padding: 18px;
+    width: 100%;
+    border: none !important;
+}
+.accordion__button{
+    background-color: #FFFFFF !important;
+    color: #000000 !important;
+}
+.accordion{
+    border: none !important;
+    border-radius: 0ch !important;
+}
+.card-header{
+    background-color: #FFFFFF !important;
+    border-bottom: none !important;
+    margin-bottom: 0px;
+    padding: 0rem 0rem;
+    text-decoration-line: none !important;
+    text-align: left;
+    font-weight: 500;
+    font-size: 22px;
+    color: #291E17;
+    margin-left: 120px;
+}
+.card{
+    position: relative;
+    display: -webkit-box;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+    flex-direction: column;
+    min-width: 0;
+    word-wrap:break-word;
+    background-color: #FFFFFF;
+    background-clip: none !important;
+    border: none !important;
+    border-radius: none !important;
+}
+.Profile__hr__lines{
+    width: 679px;
+    border: 1.2px solid #CC9B66;
+    background-color: #CC9B66;
+    margin-top: 17px !important;
+    margin-bottom: 0px !important;
+    margin-left: 80px;
+}
+.card-body{
+    padding-top: 8px;
+}
+
+.Profile__relative__image{
+    width: 100px;
+    height: 100px;
+    border: 2px solid #000000;
+    box-sizing: border-box;
+    box-shadow: 0px 4px 4px rgba(0,0,0,0.25);
+    border-radius: 41px;
+    float: left;
+    margin-left: 100px;
+}
+.Profile__relative__relation{
+    float: right;
+    position: absolute;
+    left: 250px;
+    top: 30px;
+    color: #291E17;
+    font-size: 22px;
+    font-weight: bold;
+    line-height: 26px;
+}
+.Profile__relative__age{
+    font-weight: normal;
+    font-size: 17px;
+    line-height: 20px;
+    color: #3D3D3D;
+}
+.Profile__select-avatar__button{
+    background: #FFFFFF !important;
+    border: 1px solid #319EDB;
+    border-radius: 30px;
+    font-size: 17px;
+    color: #319EDB;
+    width: 117px;
+    padding:1px 8px 1px 7px;
+    margin-right: 30px;
+    margin-top: 14px;
+}
+.Profile__save-button__button{
+    width: 70px;
+    background: #FFFFFF;
+    border: 1px solid #A6DB31;
+    border-radius: 30px;
+    color: #A6DB31;
+    padding: 1px 7px 1px 7px;
+    margin-top: 14px;
+}
 /*For small and medium devices*/
 @media (min-width:576px) and (max-width:800px){
     .Profile__photo{
