--- a/src/components/Tabs/Have.css
+++ b/src/components/Tabs/Have.css
@@ -22,7 +22,21 @@
     margin-top: 10px;
     margin-bottom: 50px;
 }
-
+.Have__SaveButton{
+    margin-left: 20%;
+    width: 150px;
+    height: 50px;
+    margin-bottom: 100px;
+    border-radius: 50px;
+    border: 2px solid #CC9B66;
+    color: solid black;
+    font-size: 18px;
+    background-color: #CC9B66;
+ }
+ .Have__SaveButton:hover{
+     background-color: #CC9B66;
+     border: none;
+ }
 /*For small and medium devices*/
 @media(min-width: 576px) and (max-width: 800px){
     .Have__hr{
