--- a/src/components/Tabs/Me.css
+++ b/src/components/Tabs/Me.css
@@ -37,6 +37,21 @@
     width: 247px;
 
 }
+.Me__SaveButton{
+   margin-left: 20%;
+   width: 150px;
+   height: 50px;
+   margin-bottom: 100px;
+   border-radius: 50px;
+   border: 2px solid #CC9B66;
+   color: solid black;
+   font-size: 18px;
+   background-color: #CC9B66;
+}
+.Me__SaveButton:hover{
+    background-color: #CC9B66;
+    border: none;
+}
 /*For small and medium devices*/
 @media (min-width:576px) and (max-width:800px){
     .Me__property{
