--- a/src/components/Profile.css
+++ b/src/components/Profile.css
@@ -3,6 +3,9 @@
     margin-top: 147px;
     padding-left: 97px;
 }
+ .Tabs__column{
+    padding-left: 5rem;
+} 
 .Profile__photo{
     width: 190px;
     height:190px;
@@ -105,7 +108,7 @@
 .react-tabs__tab-list{
     border-bottom: 0 !important;
     padding: 0;
-    margin:0px 0px 86px 0px!important;
+    margin:0px 0px 71px 0px!important;
     font-size: 31px !important;
     font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
@@ -117,15 +120,15 @@
     position: relative;
     list-style: none !important;
     padding: 0px 0px 0px 0px !important;
-    margin: 46px 204px 0px 0px !important;
+    margin: 46px 120px 0px 5rem !important;
     cursor: pointer;
 }
 .react-tabs__tab--selected{
     border-color: #CC9B66 !important;
     color:black;
-    border-radius: 0px 0px 0px 0px !important;
     border-bottom: 6px solid #CC9B66 !important ;
     font-weight: bold !important;
+    
 }
 
 .Profile__RelationshipHeading{
@@ -205,7 +208,7 @@
     padding-top: 8px;
     background-color: #FCFCFC;
     margin-left: 43px;
-   margin-right: 200px;
+    width: 629px;
 }
 
 .Profile__relative__image{
