--- a/src/components/Tabs/Have.css
+++ b/src/components/Tabs/Have.css
@@ -17,6 +17,9 @@
     line-height: 21px;
     color: #291E17;
 }
+.Have__Hdisease{
+    padding-left: 5px;
+}
 .Have__hr{
     width: 700px;
     height: 0px;
