--- a/src/components/Tabs/I.css
+++ b/src/components/Tabs/I.css
@@ -6,6 +6,9 @@
     font-weight: bold;
     padding-left: 30px;
 }
+.I__ChewingTobacco{
+    width: 220px;
+}
 .I__value{
     font-size: 18px;
     line-height: 28px;
