--- a/src/components/Profile.css
+++ b/src/components/Profile.css
@@ -97,12 +97,18 @@
     position: absolute;
     top: 541px;
     left: 35px;
+   
 }
 .Profile__plus{
     position: absolute;
     left:11px;
     top:11px;
+    background: #F3F3F3;
+    box-shadow: 0px 0px 6px rgba(143, 143, 143, 0.25);
+    padding:12px ;
+    border-radius: 50%;
 }
+
 /*React Tabs css properties*/
 
 .react-tabs__tab-list{
@@ -128,6 +134,7 @@
     color:black;
     border-bottom: 6px solid #CC9B66 !important ;
     font-weight: bold !important;
+
     
 }
 
