--- a/src/components/Profile.css
+++ b/src/components/Profile.css
@@ -206,7 +206,7 @@
     border-radius: none !important;
 }
 .Profile__hr__lines{
-    width: 679px;
+    width: 717px;
     border: 1.2px solid #CC9B66;
     background-color: #CC9B66;
     margin-top: 17px !important;
@@ -217,7 +217,7 @@
     padding-top: 8px;
     background-color: #FCFCFC;
     margin-left: 53px;
-    width: 680px;
+    width: 720px;
 }
 
 .Profile__relative__image{
@@ -246,6 +246,20 @@
     line-height: 20px;
     color: #3D3D3D;
 }
+.Profile__select-photo__button{
+    width: 117px;
+    padding:1px 8px 1px 7px;
+    font-size: 17px;
+    line-height: 20px;
+    color: #F60DDF;
+    border: 1px solid #F60DDF;
+    border-radius: 30px;
+    background-color: #FFFFFF;
+    margin-top:5px;
+    height: 28px;
+    margin-right: 26px;
+    margin-left: 80px;
+}
 .Profile__select-avatar__button{
     background: #FFFFFF !important;
     border: 1px solid #319EDB;
@@ -254,9 +268,9 @@
     color: #319EDB;
     width: 117px;
     padding:1px 8px 1px 7px;
-    margin-right: 30px;
+    margin-right: 33px;
     margin-top:5px;
-    margin-left: 50px;
+    margin-left: 0px;
 }
 .Profile__save-button__button{
     width: 70px;
@@ -282,7 +296,7 @@
     font-weight: normal;
 }
 .Profile__relative__right-property{
-    padding-left: 30px;
+    padding-left: 40px;
 }
 
 .Profile__relative__Name{
@@ -296,6 +310,7 @@
 .Profile__relative__Phone{
     position: absolute;
     left: 160px;
+    max-width: 40% !important;
 }
 .Profile__relative__Age{
     position: absolute;
@@ -311,7 +326,7 @@
 }
 .form-control{
     display: flex !important;
-    width:60% !important;
+    width:50% !important;
     padding: 0px !important;
     font-size: 17px !important;
     color: #000000 !important;
@@ -320,6 +335,7 @@
     border: none !important;
     border-radius: none !important;
 }
+
 .Profile__hr{
     margin-top: 32px !important;
     width: 284px;
@@ -330,7 +346,7 @@
     margin-top: 32px !important;
     width: 284px;
     border: 0.6px solid #CC9B66;
-    margin-left: 30px;
+    margin-left: 40px;
 }
 
 .Profile__occupation{
