--- a/src/components/Tabs/Me.css
+++ b/src/components/Tabs/Me.css
@@ -1,28 +1,69 @@
-/*Desktop view*/
 .Me__property{
-    color:#291E17;
-    font-style: normal;
-    font-size: 18px;
-    line-height: 21px;
-    font-weight: bold;
-    padding-left: 30px;
+  height: 21px;
+  font-weight: bold;
+  font-size: 18px;
+  line-height: 21px;
+  color: #291E17;
+  padding-top: 3px;
 }
-.Me__Emergency{
-    width: 210px;
+.Me__ContactNo{
+    width: 30% !important;
+    margin-left: 20px !important;
+    background-color: #FFFFFF !important;
 }
-.Me__value{
-    font-size: 18px;
-    line-height: 28px;
-    font-weight: 300;
-    color: #291E17;
+.Me__EmergencyContactNo{
+    margin-left: 20px;
+    width: 30% !important;
+    background-color: #FFFFFF !important;
+}
+.Me__Email{
+    margin-left: 20px;
+    width: 40% !important;
+    background-color: #FFFFFF !important;
+}
+.Me__DOB{
+    margin-left: 20px;
+    width: 30% !important;
+    background-color: #FFFFFF !important;
+}
+.Me__Height{
+   margin-left: 20px;
+   width: 20% !important;
+   background-color: #FFFFFF !important;
+}
+.Me__Weight{
+   margin-left: 20px;
+   width: 20% !important;
+   background-color: #FFFFFF !important;
+}
+.Me__Status{
+   width: 30% !important;
+   margin-left: 20px;
+   background-color: #FFFFFF !important;
+}
+.Me__Occupation{
+  margin-left: 20px;
+  width: 30% !important;
+  background-color: #FFFFFF !important;
+}
+.Me__City{
+    margin-left: 20px;
+    width: 30% !important;
+    background-color: #FFFFFF !important;
+}
+.Me__Locality{
+    margin-left: 20px;
+    width: 40% !important;
+    background-color: #FFFFFF !important;
 }
 .Me__hr{
-    width: 700px;
-    height: 0px;
-    border: 1.5px solid #CC9B66;
-    background-color:#CC9B66 ;
-    margin-left: 0px;
-    margin-top: 10px;
+    margin-top: 14px;
+    color: #CC9B66;
+    height: 0.2px;
+    border: 1px solid #CC9B66;
+    background-color: #CC9B66;
+    margin-left: -30px;
+    width: 693px;
     margin-bottom: 50px;
 }
 .Dropdown-placeholder{
@@ -44,62 +85,42 @@
     width: 247px;
 
 }
-.Me__SaveButton{
-   margin-left: 20%;
-   width: 150px;
-   height: 50px;
-   margin-bottom: 100px;
-   border-radius: 50px;
-   border: 2px solid #CC9B66;
-   color: solid black;
-   font-size: 18px;
-   background-color: #CC9B66;
+.Me__State__Dropdown{
+    margin-left: 20px;
+    margin-top: -10px;
 }
-.Me__SaveButton:hover{
-    background-color: #CC9B66;
-    border: none;
+.Me__DetectMyLocation{
+    font-weight: 600;
+    font-size: 17px;
+    line-height: 20px;
+    color: #0074DF;
+    margin-left: 170px;
 }
-/*For small and medium devices*/
-@media (min-width:576px) and (max-width:800px){
-    .Me__property{
-        font-size:13px;
-        padding-left: 95px;
-        width: max-content;
-    }
-    .Me__value{
-        font-size:13px;
-        line-height: 20px;
-        padding-left: 50px;
-    }
-    .Me__emergency-number{
-        padding-left: 110px;
-        width: max-content;
-    }
-    .Me__hr{
-        width:340px;
-        margin-left:95px;
-        margin-top:10px;
-        margin-bottom:20px;
-    }
+.Me__detect-image{
+    margin-right: 50px;
 }
 /*For medium and large devices*/
-@media(min-width:800px) and (max-width: 1200px){
-    .Me__property{
-        padding-left: 70px;
-        font-size: 15px;
-        width:max-content;
-    }
+@media(min-width: 576px) and (max-width: 800px){
     .Me__hr{
-        width: 450px;
-        margin-left: 70px;
-        font-size: 15px;
-        margin-top:10px;
-        margin-bottom: 20px;
+        margin-top: 14px;
+        color: #CC9B66;
+        height: 0.2px;
+        border: 1px solid #CC9B66;
+        background-color: #CC9B66;
+        margin-left: -30px;
+        width: 365px;
+        margin-bottom: 50px;
     }
-    .Me__emergency-number{
-        padding-left: 70px;
+    .Me__DetectMyLocation{
+        margin-left: 53px;
     }
-    .Me__value{
-        font-size: 15px;
+}
+/*For large devices*/
+@media(min-width:800px) and (max-width: 1200px){
+    .Me__hr{
+       width: 573px;
+    }
+    .Me__DetectMyLocation{
+        margin-left: 105px;
     }
 }
